# anaconda-ai

./: .env.example  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  AGENTS.md  README.md  environment-dev.yml  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: integration-request.md
.github/workflows/: docs.yml  release.yml  test.yml
.opencode/command/: speckit.implement.md
conda.recipe/: meta.yaml
docs/source/: conf.py
examples/: environment.yml  langchain_vectordb.ipynb  sdk.ipynb
examples/docs-agent/: agent.py  anaconda-ai.toml  conda-lock.default.yml  conda-project.yml  environment.yml
examples/integrations/: dspy.ipynb  environment.yml  instructor.ipynb  langchain.ipynb  langchain_vectordb.ipynb  litellm.ipynb  llama-index-vector-query.ipynb  llama-index.ipynb  openai-client.ipynb  panel-app.py  pydantic-ai.ipynb
examples/scraping/: anaconda-pricing.ipynb  environment.yml
examples/specs/: anaconda-ai.toml
specs/001-coding-agent-wrapper/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-coding-agent-wrapper/checklists/: requirements.md
specs/001-coding-agent-wrapper/contracts/: cli.md
src/: anaconda_ai.pth
src/anaconda_ai/: __init__.py  agents.py  cli.py  config.py  exceptions.py  mcp_server.py  process.py  spec.py
src/anaconda_ai/clients/: __init__.py  ai_catalog.py  ai_catalyst.py  ai_navigator.py  anaconda_desktop.py  base.py  ollama.py
src/anaconda_ai/integrations/: instructor.py  langchain.py  litellm.py  llama_index.py  llm.py  panel.py  pydantic_ai.py
src/anaconda_models/: __init__.py  catalog.py  cli.py  client.py  config.py  core.py  exceptions.py  langchain.py  litellm.py  llama_index.py  llm.py  panel.py
src/anaconda_models/_conda/: entrypoint.py  plugins.py
src/anaconda_models/cli/: models.py
src/anaconda_models/clients/: __init__.py  ai_navigator.py  base.py
src/anaconda_models/integrations/: litellm.py  llama_index.py  llm.py  pandasai.py  panel.py
src/llama_index/llms/anaconda_models/: __init__.py  base.py
tests/: test_agents.py  test_cli.py  test_core.py  test_process.py  test_system_prompts.py
tests/e2e/: CLAUDE.md
tests/e2e/.claude/agents/: playwright-test-generator.md  playwright-test-healer.md  playwright-test-planner.md
tests/e2e/.claude/skills/anaconda-playwright-utils/: SKILL.md
tests/e2e/.claude/skills/anaconda-playwright-utils/references/: actions.md  api-utils.md  assertions.md  element-utils.md  locators.md  page-utils.md
tests/e2e/.claude/skills/playwright-cli/references/: test-generation.md  tracing.md  video-recording.md
tests/e2e/.cursor/rules/: anaconda-playwright-utils.mdc  playwright-agents.mdc  project.mdc
tests/e2e/fixtures/: fixture.ts
tests/e2e/pages/cli/: anaconda-ai-cmds.ts  anaconda-ai-setup.ts  anaconda-ai.ts  cli.ts  cliCommands.ts
tests/e2e/specs/cli/: anaconda-ai.spec.ts  cli.spec.ts
tests/e2e/testdata/: model-api.ts  site-data.ts
tests/test-setup/: global-setup.ts  global-teardown.ts  page-setup.ts
tests/utils/: CliUtils.ts
