[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs>=0.3", "setuptools-scm>=7.1"]

[project]
dependencies = [
  "anaconda-auth >=0.13.0rc3",
  "anaconda-cli-base >=0.8",
  "rich",
  "pydantic >=2",
  "typer",
  "ruamel.yaml",
  "openai",
  "platformdirs",
  "packaging"
]
description = "Download and launch curated models from Anaconda"
dynamic = ["version"]
license = {text = "BSD-3-Clause"}
name = "anaconda-ai"
readme = "README.md"
requires-python = ">=3.10"

[project.entry-points."anaconda_cli.subcommand"]
ai = "anaconda_ai.cli:app"

[project.entry-points.llm]
anaconda = "anaconda_ai.integrations.llm"

[project.optional-dependencies]
all = [
  "anaconda-ai[langchain,dspy,instructor,litellm,llm,llama-index,panel,pydantic-ai]"
]
dev = [
  "mypy",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "tox",
  "types-requests"
]
dspy = ["dspy"]
instructor = ["instructor"]
langchain = ["langchain-openai>=0.2.8"]
litellm = ["litellm"]
llama-index = ["llama-index-llms-openai", "llama-index-embeddings-openai"]
llm = ["llm>=0.22"]
panel = [
  "panel>=1.5.4; python_version >= '3.10'",
  "numpy",
  "httpx"
]
publish = [
  "build",
  "twine",
  "wheel"
]
pydantic-ai = ["pydantic-ai>=1.50"]

[tool.distutils.bdist_wheel]
universal = true

[tool.hatch.build.hooks.vcs]
version-file = "src/anaconda_ai/_version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src/anaconda_ai",
  "/pyproject.toml",
  "/tests",
  "/Makefile",
  "/environment-dev.yml"
]

[tool.hatch.build.targets.wheel]
packages = ["src/anaconda_ai"]

[tool.hatch.version]
source = "vcs"
raw-options.local_scheme = "no-local-version"

[tool.mypy]
disallow_untyped_defs = true
files = [
  "src/**/*.py",
  "tests/**/*.py"
]
python_version = "3.10"

[[tool.mypy.overrides]]
ignore_errors = true
module = "*._version"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "rich_click.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "llama_index.core.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "llama_index.llms.openai.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "llama_index.embeddings.openai.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "llm.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "ruamel.*"

[tool.pytest.ini_options]
addopts = [
  "--cov=anaconda_ai",
  "--color=yes",
  "--cov-append",
  "--cov-branch",
  "--cov-report=html",
  "--cov-report=html:./cov_html",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--durations=5",
  "-vv"
]
markers = [
  "integration: Integration tests requiring a browser"
]
norecursedirs = ["env", "envs", ".tox"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310,py311,py312,py313,py314,mypy
isolated_build = True

[gh-actions]
python =
    3.10: py310, mypy
    3.11: py311, mypy
    3.12: py312, mypy
    3.13: py313, mypy
    3.14: py314

[testenv]
deps = pytest
extras = dev
commands = pytest -m "not integration"
conda_deps =
    anaconda-auth >= 0.13.0rc3
conda_channels =
    conda-forge
    anaconda-cloud/label/dev

[testenv:mypy]
deps = mypy
extras = dev,all
commands = mypy

[testenv:report]
deps = coverage[toml]
skip_install = true
commands =
    coverage report
    coverage xml -o coverage.xml
"""

[tool.vendoring]
destination = "src/anaconda_ai/_vendor/"
namespace = "anaconda_ai._vendor"
protected-files = ["__init__.py", "requirements.txt"]
requirements = "src/anaconda_ai/_vendor/requirements.txt"

[tool.vendoring.license.directories]
setuptools = "pkg_resources"

[tool.vendoring.license.fallback-urls]
pkce = "https://github.com/RomeoDespres/pkce/raw/master/LICENSE"
